--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "expo-location": "~15.1.1",
     "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^18.0.33",
+    "react": "^18.2.0"
   },
   "private": true
 }
